--- a/css/index.css
+++ b/css/index.css
@@ -1,17 +1,11 @@
 
 body {
-	position:absolute;
+	
 	font-family: Arial, Lucida Grande, Verdana, Sans-serif;
 	font-size: 12px;
 	color: #000;
-	background:url(../images/backgrounds/4.jpg) no-repeat ;
-	width:100%;height:100%;
-	margin:0px;
-	display: block;
-}
-
-div#content{
-	float:none; 
+	background:url(../images/backgrounds/4.jpg) fixed center no-repeat ;
+	width:100%;height:500px
 }
 div#login-div{
 	position: relative;float: left;left:2%;top:380px; width:300px;height:120px;background: #000; opacity:0.7;
