--- a/templates/default/css/menu.css
+++ b/templates/default/css/menu.css
@@ -1,7 +1,7 @@
 
 #default-main-menu ul, li{
 	padding: 0px;
-	margin: 0px;
+	margin: 0px;z-index: 1000
 }
 #default-main-menu ul.dropmenu{
 	position: relative;
@@ -9,7 +9,7 @@
 	padding: 1px 0px 0px 0px;
 	background:transparent url(../images/navigation.png) repeat-x scroll 0 0;
 	display:block;
-	height: 35px;
+	height: 30px;
 	font-family:Verdana,Arial,Helvetica,sans-serif;
 	font-size: 12px;
 }
