--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@ body {
 	font-size: 12px;
 	color: #000;
 	background:url(../images/backgrounds/4.jpg) fixed center no-repeat ;
-	width:100%;height:500px
+	width:100%;height:500px;margin: 0px; 
 }
 div#login-div{
 	position: relative;float: left;left:2%;top:380px; width:300px;height:120px;background: #000; opacity:0.7;
