--- a/templates/default/css/default.css
+++ b/templates/default/css/default.css
@@ -13,16 +13,33 @@ div#default-wrapper{
 	width:80%;
 	margin:0 auto ;
 	background:url(../images/bg_transparent.png);
-
+	padding-top:4px;
 	min-height:500px;box-shadow:0 0 7px #000;
 
 }
 
 div#default-header{
-	position: relative;width:99%;border:0px solid #000;height: 60px;margin:0px auto 4px auto;box-shadow:0 0 5px #000;
-	border-radius:5px;
+	position: relative;width:98%;border:0px solid #000;height: 43px;margin:0px auto 4px auto;box-shadow:0 0 5px #000;
+	border-radius:5px;padding:4px;
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;	
+}
+
+div#default-header div#default-header-profile{
+	position: relative;background: #7D7D7D url(../images/gradient2.png) repeat-x  ;
+	height: 35px;width:250px;float:right;
+	box-shadow:0 0 5px #000;padding:4px;
+	border-radius:5px;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;z-index: 10000;
+
+}
+div#default-main-menu{
+	position: relative;background: #7D7D7D url(../images/gradient2.png)  ;height: 35px;
+	box-shadow:0 0 5px #000;
+	border-radius:5px;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;width:99%;margin:0px auto 4px auto;z-index: 10000;
 }
 div#default-ribbon-menu{
 	position: relative;width:95%;float:right;right:5px;
