--- a/templates/default/css/default.css
+++ b/templates/default/css/default.css
@@ -93,6 +93,11 @@ div#default-header div#default-header-profile p.name{
 div#default-header div#default-header-profile p.type{
 	position:relative;float: left; left:-90px;top:3px;font-size:12px ; 
 }
+
+/* 
+main menu 
+
+*/
 div#default-main-menu{
 	position: relative;background: #7D7D7D url(../images/gradient2.png)  ;height: 35px;
 	box-shadow:0 0 5px #000;
@@ -100,37 +105,87 @@ div#default-main-menu{
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;width:99%;margin:0px auto 4px auto;z-index: 100;
 }
+
+/* 
+
+ribbon menu 
+
+*/
 div#default-ribbon-menu{
 	position: relative;width:95%;float:right;right:5px;
 	border:0px solid #000;
-	height:40px;
+	height:50px;
 	margin:4px auto 0px auto;	
 	box-shadow:0 0 5px #000;
 	border-radius:5px;
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;		
 }
+
 div#default-content{
 	position:relative;
 	margin: 55px auto 0px auto;min-height: 500px;padding: 10px
 }
 
 ul#default-ribbon-menu{
-	
-	list-style: none ; float:left;position: relative;
+	margin:0px;padding:3px
+	list-style: none ; float:left;position: relative;z-index: 100
 }
 ul#default-ribbon-menu li{
 	
-	list-style: none ; float:left;position: relative;
+	list-style: none ; float:left;position: relative;border: 1px solid #999;border-radius:5px;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;margin:3px;height:35px;padding:2px 8px 8px 8px;
 }
-
-ul#default-ribbon-menu li div.save{
+/* menu div formattings */
+ul#default-ribbon-menu li div{
+	height:32px;width:32px;
+		}
+ul#default-ribbon-menu li a{
+	position: relative;top:28px;font-size: 9px
+		}
+	ul#default-ribbon-menu li div.APPLY{
+		background:url(../../../images/toolbar/icon-32-apply.png);
 	
-
-}
-
-
-
+	}
+	ul#default-ribbon-menu li div.BACK{
+		
+		background:url(../../../images/toolbar/icon-32-back.png);
+	}
+	ul#default-ribbon-menu li div.CANCEL{
+		background:url(../../../images/toolbar/icon-32-cancel.png);
+	
+	}
+	
+	ul#default-ribbon-menu li div.CONFIG{
+		background:url(../../../images/toolbar/icon-32-config.png);
+	
+	}
+	ul#default-ribbon-menu li div.DELETE{
+		background:url(../../../images/toolbar/icon-32-delete.png);
+	
+	}
+		
+	ul#default-ribbon-menu li div.HELP{
+		background:url(../../../images/toolbar/icon-32-help.png);
+	
+	}
+	ul#default-ribbon-menu li div.NEW{
+		background:url(../../../images/toolbar/icon-32-apply.png);
+	
+	}
+	ul#default-ribbon-menu li div.PRINT{
+		
+		background:url(../../../images/toolbar/icon-32-print.png);
+	}
+	ul#default-ribbon-menu li div.SAVE{
+		background:url(../../../images/toolbar/icon-32-save.png);
+	
+	}	
+		
+	
+	
+	
 
 
 
