--- a/templates/default/css/default.css
+++ b/templates/default/css/default.css
@@ -59,7 +59,7 @@ div#default-header div#default-header-profile #default-header-profile-more{
 	z-index: 120;border:2px solid #ccc;
 	border-radius:5px;
 	-moz-border-radius:5px;
-	-webkit-border-radius:5px;box-shadow:0 0 5px #000;display: none 
+	-webkit-border-radius:5px;box-shadow:0 0 5px #000;display: none ;cursor: default;
 	
 
 }
@@ -91,7 +91,7 @@ div#default-header div#default-header-profile p.name{
 	text-shadow: 0px 1px 2px #999;
 }
 div#default-header div#default-header-profile p.type{
-	position:relative;float: left; left:-90px;top:3px;font-size:12px ; 
+	position:relative;float: left; left:-80px;top:3px;font-size:12px ; 
 }
 
 /* 
@@ -114,7 +114,7 @@ ribbon menu
 div#default-ribbon-menu{
 	position: relative;width:95%;float:right;right:5px;
 	border:0px solid #000;
-	height:50px;
+	height:55px;
 	margin:4px auto 0px auto;	
 	box-shadow:0 0 5px #000;
 	border-radius:5px;
@@ -128,8 +128,8 @@ div#default-content{
 }
 
 ul#default-ribbon-menu{
-	margin:0px;padding:3px
-	list-style: none ; float:left;position: relative;z-index: 100
+	margin:0px!important;
+	list-style: none ; float:right;position: relative;z-index: 100;padding: 2px 3px 6px 4px
 }
 ul#default-ribbon-menu li{
 	
@@ -139,46 +139,49 @@ ul#default-ribbon-menu li{
 }
 /* menu div formattings */
 ul#default-ribbon-menu li div{
-	height:32px;width:32px;
+	height:32px;width:32px;cursor: pointer
 		}
 ul#default-ribbon-menu li a{
-	position: relative;top:28px;font-size: 9px
+	position: relative;top:0px;font-size: 9px;font-weight: bold;	color: #303030
 		}
-	ul#default-ribbon-menu li div.APPLY{
+ul#default-ribbon-menu li a p{
+	position: relative;top:-12px;font-size: 9px;font-weight: bold;	color: #303030
+		}
+ul#default-ribbon-menu li div.APPLY{
 		background:url(../../../images/toolbar/icon-32-apply.png);
 	
 	}
-	ul#default-ribbon-menu li div.BACK{
+ul#default-ribbon-menu li div.BACK{
 		
 		background:url(../../../images/toolbar/icon-32-back.png);
 	}
-	ul#default-ribbon-menu li div.CANCEL{
+ul#default-ribbon-menu li div.CANCEL{
 		background:url(../../../images/toolbar/icon-32-cancel.png);
 	
 	}
 	
-	ul#default-ribbon-menu li div.CONFIG{
+ul#default-ribbon-menu li div.CONFIG{
 		background:url(../../../images/toolbar/icon-32-config.png);
 	
 	}
-	ul#default-ribbon-menu li div.DELETE{
+ul#default-ribbon-menu li div.DELETE{
 		background:url(../../../images/toolbar/icon-32-delete.png);
 	
 	}
 		
-	ul#default-ribbon-menu li div.HELP{
+ul#default-ribbon-menu li div.HELP{
 		background:url(../../../images/toolbar/icon-32-help.png);
 	
 	}
-	ul#default-ribbon-menu li div.NEW{
+ul#default-ribbon-menu li div.NEW{
 		background:url(../../../images/toolbar/icon-32-apply.png);
 	
 	}
-	ul#default-ribbon-menu li div.PRINT{
+ul#default-ribbon-menu li div.PRINT{
 		
 		background:url(../../../images/toolbar/icon-32-print.png);
 	}
-	ul#default-ribbon-menu li div.SAVE{
+ul#default-ribbon-menu li div.SAVE{
 		background:url(../../../images/toolbar/icon-32-save.png);
 	
 	}	
