added staff,item components,and fixed several bugs in previous components

--- a/templates/default/css/default.css
+++ b/templates/default/css/default.css
@@ -247,7 +247,10 @@ ul#default-ribbon-menu li div.SAVE{
 	
 	}	
 		
+ul#default-ribbon-menu li div.VIEW{
+		background:url(../../../images/toolbar/icon-32-view.png);
 	
+	}	
 	
 	
 
