--- a/components/com_farmer/css/farmer.css
+++ b/components/com_farmer/css/farmer.css
@@ -33,6 +33,7 @@ form#farmerReg table {
 #farmer_names td{
 	font-size : 13px;
 	height: 30px;
+	text-align: center;
 }
 #farmer_names a{
 	text-decoration: none;
@@ -48,21 +49,22 @@ form#farmerUpdate table{
 }
 
 .class-farmer_names-editBut{
-	width: 100px;
+	width: 80px;
 	height: 20px;
 	background-color: #ccc;
 	text-align: center;
 	padding-top: 3px;
 	border: 1px solid #000;
-	 
+	
 }
 .class-farmer_names-delBut{
-	width: 100px;
+	width: 80px;
 	height: 20px;
 	background-color: #ccc;
 	text-align: center;
 	padding-top: 3px; 
 	border: 1px solid #000;
+	
 }
 
 form#farmerRegForSeason{
@@ -91,4 +93,21 @@ form#farmerRegForSeason table tr{
 }
 form#farmerRegForSeason table select{
 	height: 25px;padding: 4px
+}
+table#farmer_names-seasons{
+	position : relative;
+	left : 100px;
+	width : 500px;
+	
+}
+table#farmer_names-seasons th{
+	font-weight: bold;
+	font-size: 14px;
+}
+table#farmer_names-seasons td{
+	height : 20px;
+	text-align: center;
+}
+table#farmer_names-seasons a{
+	text-decoration: none;
 }
