--- a/templates/default/css/default.css
+++ b/templates/default/css/default.css
@@ -234,10 +234,10 @@ ul#default-ribbon-menu{
 	list-style: none ; float:right;position: relative;z-index: 100;padding: 2px 3px 6px 4px
 }
 ul#default-ribbon-menu li{
-	
+	width : 60px;
 	list-style: none ; float:left;position: relative;border: 1px solid #999;border-radius:5px;
 	-moz-border-radius:5px;
-	-webkit-border-radius:5px;margin:3px;height:35px;padding:2px 8px 8px 8px;
+	-webkit-border-radius:5px;margin:3px;height:40px;padding:2px 8px 8px 8px;
 }
 /* menu div formattings */
 ul#default-ribbon-menu li div{
