--- a/templates/default/css/default.css
+++ b/templates/default/css/default.css
@@ -6,38 +6,45 @@ body{
 a{
 
 }
+h1{
+	 font-size: 18px;
+}
+
+h2{
+}
+
+h3{
+	font-size: 14px;
+}
+
+h4{
+}
+
+h5{
+	font-size: 12px;
+}
+
+h6{
+}
+
+.well{
+    padding: 10px; 
+    background: #C3C3C3;
+    border: 1px solid #ccc;
+    border-radius:5px;
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px; 
+}
+
 input[type="text"]{
 	border:1px solid #ccc;padding: 4px
 }
 input[type="password"]{
 	border:1px solid #ccc;padding: 4px
 }
-input[type="submit"]{
-	border:1px solid #ccc;padding: 4px 20px ;
-	height:30px;
-	background:  #1D4088;
-	color:#fff;
-	cursor: pointer;
-	border-radius:15px;
-	-moz-border-radius:15px;
-	-webkit-border-radius:15px;	
-}
-input[type="reset"]{
-	border:1px solid #ccc;padding: 4px 20px ;
-	height:30px;
-	background:  #1D4088;
-	color:#fff;
-	cursor: pointer;
-	border-radius:15px;
-	-moz-border-radius:15px;
-	-webkit-border-radius:15px;	
-}
-input[type="button"]{
-	border:1px solid #ccc;padding: 4px 20px ;height:30px;background:  #1D4088;color:#fff;cursor: pointer;
-	border-radius:15px;
-	-moz-border-radius:15px;
-	-webkit-border-radius:15px;	
-}
+
+
+
 submit{
 	padding:4px;height:30px;
 
@@ -45,9 +52,89 @@ submit{
 table{
 	border-collapse: collapse;
 }
-table td{
-	vertical-align: center;
+
+/*
+table 
+
+*/
+.table{
+	
+	width:100%;
+	position:relative;
+	border-collapse: collapse;
 }
+.table th{
+	text-align: left;padding: 7px 15px;background: #D0D0D0
+}
+.table td{
+	border-top:1px solid #999;
+	padding: 7px 15px;text-align: left;
+}
+
+.small{
+}
+.small td{
+	padding: 3px 4px
+}
+/* button */
+.button{
+	display: inline-block;
+	padding: 6px 14px;
+	margin-bottom: 0;
+	font-size: 12px;
+	line-height: 10px;
+	color: #333;
+	text-align: center;
+	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+	vertical-align: middle;
+	cursor: pointer;
+	background-color: whiteSmoke;
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#E6E6E6));
+	background-image: -webkit-linear-gradient(top, white, #E6E6E6);
+	background-image: -o-linear-gradient(top, white, #E6E6E6);
+	background-image: linear-gradient(to bottom, white, #E6E6E6);
+	background-image: -moz-linear-gradient(top, white, #E6E6E6);
+	background-repeat: repeat-x;
+	border: 1px solid #BBB;
+	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	border-bottom-color: #A2A2A2;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
+	filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+	-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+	-moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+	text-decoration: none;
+}
+.primary{
+	color: white;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	background-color: #006DCC;
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#08C), to(#04C));
+	background-image: -webkit-linear-gradient(top, #08C, #04C);
+	background-image: -o-linear-gradient(top, #08C, #04C);
+	background-image: linear-gradient(to bottom, #08C, #04C);
+	background-image: -moz-linear-gradient(top, #08C, #04C);
+	background-repeat: repeat-x;
+	border-color: #04C #04C #002A80;
+	filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0);
+	filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+	
+}
+[class^="icon-"], [class*=" icon-"]{
+display: inline-block;
+width: 14px;
+height: 14px;
+margin-top: 1px;
+line-height: 14px;
+vertical-align: text-top;
+background-image: url("../images/glyphicons-halflings.png");
+background-position: 14px 14px;
+background-repeat: no-repeat;
+}
+
 /*
 special classes
 */
@@ -190,7 +277,7 @@ div#default-main-menu{
 	box-shadow:0 0 5px #000;
 	border-radius:5px;
 	-moz-border-radius:5px;
-	-webkit-border-radius:5px;width:99%;margin:0px auto 4px auto;z-index: 100;
+	-webkit-border-radius:5px;width:99%;margin:0px auto 4px auto;z-index: 150;
 }
 
 /* 
@@ -214,7 +301,7 @@ div#default-content{
 	margin: 55px auto 0px auto;min-height: 500px;padding: 10px
 }
 div#default-content-left{
-	position:relative;float: left;width:205px;min-height: 500px;color: #ccc;margin:3px;
+	position:relative;float: left;width:200px;min-height: 500px;color: #ccc;margin:3px;
 	box-shadow:0 0 5px #000;
 	border-radius:5px;
 	-moz-border-radius:5px;
